# Gantt-Chart-Code

./: .gitignore  Cargo.toml  README.md  blah.ron
cli/: Cargo.toml
cli/src/: main.rs
feature_ingester/examples/: delta.rsx
feature_ingester/src/: input.rs  lib.rs  output.rs
feature_ingester/tests/: traces.txt
program_ingester/examples/: hashmap_iteration.rs  input.txt  output.json  simple_tree.rs
program_ingester/src/: errors.rs  input.rs  lib.rs  output.rs
program_ingester/tests/: integration.rs  traces.txt
trace_ingester/: Cargo.toml
trace_ingester/examples/: input.txt  vec_ref.rsx
trace_ingester/src/: errors.rs  input.rs  output.rs
trace_ingester/tests/: integration.rs
