[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
program_ingester = {path = "../program_ingester"}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
